--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Jost">
-  <title>stokk</title>
+  <title>brain</title>
 </head>
 <body>
   <div id="root"></div>
